--- a/index.html
+++ b/index.html
@@ -3,12 +3,63 @@
 <head>
 
 <title>Пример сайта на php</title>
+
 <link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<body>
-<div class="header">
-<h2> <a href="index.html" class="buttonns">Главная</a></h2>
-</div>
+<meta name="description" content="Описание страницы" />
+	<meta name="keywords" content="Ключевые слова" />
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+      #navbar ul{
+        display: none;
+        background-color: #f90;
+        position: absolute;
+        top: 100%;
+      }
+      #navbar li:hover ul { display: block; }
+      #navbar, #navbar ul{
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+      }
+      #navbar {
+        height: 8%;
+        background-color: #666;
+        padding-left: 25px;
+        min-width: 470px;
+      }
+      #navbar li {
+        float: left;
+        position: relative;
+        height: 100%;
+      }
+      #navbar li a {
+        display: block;
+        padding: 6px;
+        width: 100px;
+        color: #fff;
+        text-decoration: none;
+        text-align: center;
+      }
+      #navbar ul li { float: none; }
+      #navbar li:hover { background-color: #f90; }
+      #navbar ul li:hover { background-color: #666; }
+    </style>
+  </head>
+
+
+<ul id="navbar">
+      <li><a href="index.html" >Главная</a></li>
+      <li><a href="contacts.html">Новости</a></li>
+      <li><a href="#">Контакты</a>
+        <ul>
+          <li><a href="#">Адрес</a></li>
+          <li><a href="#">Телефон</a></li>
+          <li><a href="#">Email</a></li>
+        </ul>
+      </li>
+      <li><a href="#">О нас</a></li>
+    </ul>
  <div class="pages">
 
 <div class="sidebar">
