--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       #navbar li:hover { background-color: #f90; }
       #navbar ul li:hover { background-color: #666; }
     </style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
 
