--- a/index.html
+++ b/index.html
@@ -1,83 +1,91 @@
-<html>
+﻿<!DOCTYPE html>
+<html lang="en" >
 
 <head>
+  <meta charset="UTF-8">
+  <title>Ремонт Наушников в Уфе</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-<title>Пример сайта на php</title>
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css'>
 
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<meta name="description" content="Описание страницы" />
-	<meta name="keywords" content="Ключевые слова" />
-	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-      #navbar ul{
-        display: none;
-        background-color: #f90;
-        position: absolute;
-        top: 100%;
-      }
-      #navbar li:hover ul { display: block; }
-      #navbar, #navbar ul{
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-      }
-      #navbar {
-        height: 8%;
-        background-color: #666;
-        padding-left: 25px;
-        min-width: 470px;
-      }
-      #navbar li {
-        float: left;
-        position: relative;
-        height: 100%;
-      }
-      #navbar li a {
-        display: block;
-        padding: 6px;
-        width: 100px;
-        color: #fff;
-        text-decoration: none;
-        text-align: center;
-      }
-      #navbar ul li { float: none; }
-      #navbar li:hover { background-color: #f90; }
-      #navbar ul li:hover { background-color: #666; }
-    </style>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+      <link rel="stylesheet" href="style.css">
+
+  
+</head>
+
+<body>
+
+  
+<header>
+  <nav>
+    <div id="brand">
+      <div id="logo">
+	  
+	  </div>
+      <div id="word-mark"></div>
+    </div>
+    <div id="menu">
+      <div id="menu-toggle">
+        <div id="menu-icon">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href="#section01" ></a></li>
+        <li><a href="#section02"></a></li>
+        <li><a href="#section03"></a></li>
+      </ul>
+    </div>
+  </nav>
+  <div id="hero-section">
+    <div id="head-line"></div>
+  </div>
+</header>
+<section id="section00">
+  <div id="heading"></div>
+</section>
+<section id="section01">
+  <div id="heading" header
+	nav
+		#brand
+			#logo
+			#word-mark
+		#menu
+			#menu-toggle
+				#menu-icon
+					.bar
+					.bar
+					.bar
+			ul
+				-for(i=0;i<4;i++)
+					li
+						a(href="#section0" + i)
+	#hero-section
+		#head-line
+-for(i=0;i<4;i++)
+	section(id='section0' + i)
+		#heading
+		
+a(href="https://youtu.be/m1IU7zjl1k4")#youtube: i.fa.fa-youtube-play></div>
+</section>
+<section id="section02">
+  <div id="heading"></div>
+</section>
+
+</section><a href="https://youtu.be/m1IU7zjl1k4" id="youtube"><i class="fa fa-youtube-play"></i></a>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+
+  
+
+    <script  src="js/index.js"></script>
 
 
-<ul id="navbar">
-      <li><a href="index.html" >Главная</a></li>
-      <li><a href="contacts.html">Новости</a></li>
-      <li><a href="#">Контакты</a>
-        <ul>
-          <li><a href="#">Адрес</a></li>
-          <li><a href="#">Телефон</a></li>
-          <li><a href="#">Email</a></li>
-        </ul>
-      </li>
-      <li><a href="#">О нас</a></li>
-    </ul>
- <div class="pages">
 
-<div class="sidebar">
-<ul>
-<li> <a href="file1.php">Раздел 1</a></li>
-<li><a href="file2.php">Раздел 2</a></li>
-<li><a href="file3.php">Раздел 3</a></li>
-</ul>
-</div>
-<div class="content">
-<h2>Контент</h2>
-</div>
- <div class="foot">
-</div>
-</div>
- <div class="footer">
-<h2>Подвал</h2>
-</div>
+
 </body>
+
 </html>
