--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="logo">
 	  
 	  </div>
-      <div id="word-mark"></div>
+      <div id="word-mark">+79273007760 </div>
     </div>
     <div id="menu">
       <div id="menu-toggle">
