--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+﻿<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Ремонт Наушников в Уфе</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+КОгда то тут будет нормальный сайт.
+  
+  Отремонтирую наушники. +79273007760 цена 150 рублей
+  пишите в вк <a href="https://vk.com/danilarasl">
+
+
+</body>
+
+</html>
