--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 КОгда то тут будет нормальный сайт.
   
-  Отремонтирую наушники. +79273007760 цена 150 рублей
-  пишите в вк <a href="https://vk.com/danilarasl">
+  <p>Отремонтирую наушники. +79273007760 цена 150 рублей
+  пишите в вк <a href="https://vk.com/danilarasl">Арасланов Данил</a>
 
 
 </body>
