--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Ремонт Наушников в Уфе</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-КОгда то тут будет нормальный сайт.
+Когда то тут будет нормальный сайт)
   
-  <p>Отремонтирую наушники. +79273007760 цена 150 рублей
-  пишите в вк <a href="https://vk.com/danilarasl">Арасланов Данил</a>
+  <p1>Отремонтирую наушники. +79273007760 цена 150 рублей<p1>
+  <p2>пишите в вк. ССылка: <a href="https://vk.com/danilarasl">Арасланов Данил</a><p2>
 
 
 </body>
