--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 Когда то тут будет нормальный сайт)
   
-  <p1>Отремонтирую наушники. +79273007760 цена 150 рублей<p1>
-  <p2>пишите в вк. ССылка: <a href="https://vk.com/danilarasl">Арасланов Данил</a><p2>
+  <font size="+3"> <p>Отремонтирую наушники. +79273007760 цена 150 рублей</p>
+  <p>пишите в вк. ССылка: <a href="https://vk.com/danilarasl">Арасланов Данил</a></font>
 
 
 </body>
